@@ -1,5 +1,11 @@
 2007-01-06  Benoît Dejean  <benoit@placenet.org>
 
+	* src/prettytable.cpp:
+	
+	Fixed icon lookup order : first wnck, then theme and default table.
+
+2007-01-06  Benoît Dejean  <benoit@placenet.org>
+
 	* src/procdialogs.cpp:
 	* src/procman.h:
 
